--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^4.0.3
   another_flutter_splash_screen: ^1.1.4
   url_launcher: ^6.1.10
-  global_bottom_navigation_bar: ^0.0.8
   icons_launcher: ^2.1.0
   google_maps_flutter: ^2.2.5
   flutter_bounceable: ^1.0.0
+  open_whatsapp: ^0.0.1
   location: ^4.4.0
 
 dev_dependencies:
