--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,5 +1,5 @@
 icons_launcher:
-  image_path: "assets/images/app_icon.jpeg"
+  image_path: "assets/images/appicon.jpg"
   platforms:
     android:
       enable: true
