--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,14 @@ dependencies:
   another_flutter_splash_screen: ^1.1.4
   url_launcher: ^6.1.10
   icons_launcher: ^2.1.0
+  search_map_place_updated: ^0.0.4
   google_maps_flutter: ^2.2.5
   flutter_bounceable: ^1.0.0
-  open_whatsapp: ^0.0.1
   location: ^4.4.0
+  open_whatsapp: ^0.0.1
+  flutter_google_places: ^0.3.0
+  google_maps_webservice: ^0.0.19
+  global_bottom_navigation_bar: ^0.0.8
 
 dev_dependencies:
   flutter_test:
