--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: ">=2.19.2 <3.0.0"
@@ -43,12 +43,12 @@ dependencies:
   google_maps_flutter: ^2.2.5
   flutter_bounceable: ^1.0.0
   location: ^4.4.0
-  open_whatsapp: ^0.0.1
   flutter_google_places: ^0.3.0
   google_maps_webservice: ^0.0.19
   global_bottom_navigation_bar: ^0.0.8
 
 dev_dependencies:
+  change_app_package_name: ^1.1.0
   flutter_test:
     sdk: flutter
 
